# hindsight-workout-tracker

./: .env.example  README.md  app.py  pyproject.toml  run.sh
lib/: coach.py  memory.py  models.py
